# cursor-briefcase-hack

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/agents/: approval_router.py  invoice_parser.py  rail_selector.py  reconciliation.py  validation.py
backend/api/: main.py  middleware.py
backend/api/routers/: applications.py  connections.py  intents.py  invoices.py  payments.py  users.py
backend/core/: blob_storage.py  config.py  logging.py  security.py  specter.py  whatsapp.py
backend/db/: migrate_add_blob_url.py  migrate_add_company_verification.py  models.py  repos.py
backend/graph/: pipeline.py
backend/rails/: base.py  mock.py  registry.py  revolut.py  wise.py  yapily.py
design/: icons.jsx  shader-bg.jsx  wallpapers.jsx
frontend/: .env.example  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/brand/: CitrusFlowBG.tsx
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  Icons.tsx  Input.tsx  IntentDetail.tsx  Logo.tsx  Modal.tsx  Sidebar.tsx  intentUtils.ts
frontend/src/pages/: Agents.tsx  ApplicationDetail.tsx  CreateAccount.tsx  Dashboard.tsx  Intents.tsx  Landing.tsx
frontend/src/store/: useStore.ts  useTheme.ts
frontend/src/types/: index.ts
